# horo-engine-starter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml  engine-test.yml  reusable-engine-integration.yml
app/: CMakeLists.txt  main.cpp
assets/models/placeholder_beacon/: asset.meta.json
assets/scenes/: starter_world.json
assets/textures/: placeholder_note.txt
